feat - Added operation to get only QRefs
